Добавляет пополнение кошелька
