# internal/handler/wallet.go
@@ -1,7 +1,9 @@
 package handler
 
 import (
+	"errors"
 	"gw-currency-wallet/internal/dto"
+	"gw-currency-wallet/internal/service"
 
 	"github.com/gin-gonic/gin"
 	"go.uber.org/zap"
@@ -33,5 +35,56 @@ func (h *Handler) GetWallets(c *gin.Context) {
 
 	sendOK(c, &dto.GetWalletsResponse{
 		Balance: wallets,
+	})
+}
+
+// Deposit godoc
+// @Summary Пополнение счета пользователя
+// @Description Позволяет пользователю пополнить свой счет. Проверяется корректность суммы и валюты.
+// @Tags wallet
+// @Accept json
+// @Produce json
+// @Param input body dto.DepositRequest true "Сумма и валюта для пополнения"
+// @Success 200 {object} dto.DepositResponse "Account topped up successfully"
+// @Failure 400 {object} dto.Message "Invalid amount or currency"
+// @Failure 500 {object} dto.Message "Internal server error"
+// @Router /api/v1/wallet/deposit [post]
+// @Security BearerAuth
+func (h *Handler) Deposit(c *gin.Context) {
+	var in dto.DepositRequest
+
+	if err := c.BindJSON(&in); err != nil {
+		sendBadRequest(c, err)
+		return
+	}
+
+	email, ok := getAccountFromContext(c)
+	if !ok {
+		sendInternalError(c)
+		return
+	}
+
+	wallets, err := h.s.Deposit(c, email, in.Currency, in.Amount)
+	if err != nil {
+		switch {
+		case errors.Is(err, service.ErrNegativeAmount):
+			sendBadRequest(c, service.ErrNegativeAmount)
+			return
+		case errors.Is(err, service.ErrZeroAmount):
+			sendBadRequest(c, service.ErrZeroAmount)
+			return
+		case errors.Is(err, service.ErrNonExistentCurrency):
+			sendBadRequest(c, service.ErrNonExistentCurrency)
+			return
+		default:
+			zap.L().Error(err.Error())
+			sendInternalError(c)
+			return
+		}
+	}
+
+	sendOK(c, &dto.DepositResponse{
+		Message:    "Account topped up successfully",
+		NewBalance: wallets,
 	})
 }
